--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,34 @@
+Wed May 17 17:27:44 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* flags.h (warn_unused_function, warn_unused_label,
+ 	warn_unused_parameter, warn_unused_variable, warn_unused_value):
+ 	Replace ``warn_unused''.
+	(set_Wunused): Add declaration.
+	* toplev.c (set_Wunused): New function.
+	(warn_unused_function, warn_unused_label, warn_unused_parameter,
+ 	warn_unused_variable, warn_unused_value): New variables.
+	(W_options): Add -Wunused-function, -Wunused-function,
+ 	-Wunused-label, -Wunused-parameter, -Wunused-variable and
+ 	-Wunused-value.  Delete -Wunused.  Handled in decode_W_option.
+
+	* toplev.c (decode_W_option): Update -Wunused flags by calling
+ 	set_Wunused.
+  	* c-decl.c (c_decode_option): Ditto for -Wall.
+
+	* stmt.c (expand_expr_stmt, expand_expr_stmt,
+ 	warn_about_unused_variables): Replace warn_unused with more
+ 	explicit warn_unused_value et.al.
+	* function.c (expand_function_end): Ditto.
+	* c-typeck.c (internal_build_compound_expr,
+ 	internal_build_compound_expr): Ditto.
+	* c-decl.c (poplevel, pop_label_level): Ditto.
+	* toplev.c (check_global_declarations): Replace warn_unused with
+	check for either warn_unused_function or warn_unused_variable.
+
+	* gcc.1, invoke.texi (Warning Options): Document
+ 	-Wunused-function, -Wunused-function, -Wunused-label,
+ 	-Wunused-parameter, -Wunused-variable and -Wunused-value options.
+
 2000-05-16  Richard Henderson  <rth@cygnus.com>
 
 	* config/ia64/crtbegin.asm (__dso_handle): Mark hidden if the
