--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,3 +1,9 @@
+Wed May 17 17:27:44 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* decl.c (c_decode_option): Update -Wall unused flags by
+ 	calling set_Wunused.
+	(poplevel): Replace warn_unused with warn_unused_label.
+
 2000-05-09  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* ch-tree.h: Update prototypes.  Remove prototypes for
