--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+Wed May 17 17:27:44 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* top.c (ffe_decode_option): Update -Wall unused flags by calling
+ 	set_Wunused.
+
 2000-05-09  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* com.c (ffecom_subscript_check_): Constify array_name
