--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -29,6 +29,11 @@ Wed May 17 17:27:44 2000  Andrew Cagney  <cagney@b1.cygnus.com>
  	-Wunused-function, -Wunused-function, -Wunused-label,
  	-Wunused-parameter, -Wunused-variable and -Wunused-value options.
 
+Wed May 17 10:28:12 2000  Philippe De Muyter  <phdm@macqel.be>
+
+	* mklibgcc.in (building libgcc1) [Xlibgcc1.a]: Find libgcc1.c in
+	$(srcdir), not in the current directory.
+
 2000-05-16  Richard Henderson  <rth@cygnus.com>
 
 	* config/ia64/crtbegin.asm (__dso_handle): Mark hidden if the
