#ifdef debugging code
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33960 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -7,7 +7,7 @@
 
 	* fixinc/fixincl.c: improve the debug displays, ignore SIGPIPE
 	* fixinc/server.c: likewise
-	* fixinc/fixfixes.c( char_macro_def_fix ): fix regex
+	* fixinc/fixfixes.c( char_macro_def_fix ): fix regex + #ifdef debugging code
 	* fixinc/inclhack.def( hpux11_fabsf ): Keep HP-UX 11 from stomping
 	on C++ math namespace
 
