--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-05-17  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cpplib.c: New feature, #pragma system_header.
+	* cpp.texi: Document special treatment of system headers, and
+	the various mechanisms to get a header that special treatment.
+
 2000-05-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* system.h (offsetof): Define at the very end, to ensure we prefer
