--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,16 @@
+2000-05-17  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl2.c (finish_anon_union): Generalize error messages to handle
+	anonymous structures.
+	* init.c (perform_member_init): Remove `name' parameter.
+	(build_field_list): New function.
+	(sort_member_init): Handle anonymous union initialization order
+	correctly.  Check for multiple initializations of the same union.
+	(emit_base_init): Don't look up fields by name here.
+	(expand_member_init): Record the result of name lookup for future
+	reference.
+	* typeck.c (build_component_ref): Fix formatting.
+	
 Wed May 17 17:27:44 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* decl.c (pop_label): Replace warn_unused with warn_unused_label.
