2000-05-17  Neil Booth  <neilb@earthling.net>
	* cpplex.c (expand_name_space): Don't use ptrdiff_t.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33964 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-17  Neil Booth  <neilb@earthling.net>
+
+	* cpplex.c (expand_name_space): Don't use ptrdiff_t.
+
 2000-05-17  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cpplib.c: New feature, #pragma system_header.
