* mklibgcc.in Add missing -DL$name when compiling modules in libgcc1.c.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33970 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 Wed May 17 18:06:12 2000  John David Anglin <dave@hiauly1.hia.nrc.ca>
 
+	* mklibgcc.in Add missing -DL$name when compiling modules in libgcc1.c.
+
 	* tree.c (build_common_tree_nodes): Do not build TI nodes unless
 	HOST_BITS_PER_WIDE_INT is >= 64.
 
