* Makefile.in (configure-target-libiberty): Depend on configure-target-newlib.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33973 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-18  Alexandre Oliva  <aoliva@cygnus.com>
+
+	* Makefile.in (configure-target-libiberty): Depend on
+	configure-target-newlib.
+
 2000-05-16  Alexandre Oliva  <aoliva@cygnus.com>
 
 	* configure.in, Makefile.in: Merge all libffi-related
