2000-05-18  Bryce McKinlay  <bryce@albatross.co.nz>
	* java/lang/Thread.java: Declare `data' as Object, not RawData.
	* java/lang/natThread.java (initialize_native): Cast `data' to
	jobject.
	* gnu/gcj/RawData.java: Clarify documentation.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33981 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2000-05-18  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* java/lang/Thread.java: Declare `data' as Object, not RawData.
+	* java/lang/natThread.java (initialize_native): Cast `data' to
+	jobject.
+	* gnu/gcj/RawData.java: Clarify documentation.
+
 2000-05-15  Andrew Haley  <aph@cygnus.com>
 
 	* include/ppc-signal.h: New file.
