--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -614,43 +614,40 @@
   ""
   "")
 
-;; Specialized version using adds/subs.  This must come before
-;; the more general patterns below.
 (define_insn ""
-  [(set (match_operand:HI 0 "register_operand" "=r")
-	(plus:HI (match_operand:HI 1 "register_operand" "%0")
-		 (match_operand:HI 2 "adds_subs_operand" "n")))]
-  ""
-  "* return output_adds_subs (operands);"
-  [(set_attr "cc" "none_0hit")
-   (set (attr "length")
-        (if_then_else (ne (match_operand:HI 2 "one_insn_adds_subs_operand" "")
-			  (const_int 0))
-		      (const_int 2)
-		      (const_int 4)))])
-
-(define_insn ""
-  [(set (match_operand:HI 0 "register_operand" "=&r,r,&r")
-	(plus:HI (match_operand:HI 1 "register_operand" "%0,0,g")
-		 (match_operand:HI 2 "nonmemory_operand" "n,r,r")))]
+  [(set (match_operand:HI 0 "register_operand" "=r,r,r,r,&r")
+	(plus:HI (match_operand:HI 1 "register_operand" "%0,0,0,0,g")
+		 (match_operand:HI 2 "nonmemory_operand" "L,N,n,r,r")))]
   "TARGET_H8300"
   "@
+   adds	%2,%A0
+   subs	%2,%A0
    add.b	%s2,%s0\;addx	%t2,%t0 
    add.w	%T2,%T0
    mov.w        %T1,%T0\;add.w  %T2,%T0"
-  [(set_attr "length" "4,2,6")
-   (set_attr "cc" "clobber,set_zn,set_zn")])
+  [(set_attr "length" "2,2,4,2,6")
+   (set_attr "cc" "none_0hit,none_0hit,clobber,set_zn,set_zn")])
 
 (define_insn ""
-  [(set (match_operand:HI 0 "register_operand" "=r,r")
-	(plus:HI (match_operand:HI 1 "register_operand" "%0,0")
-		 (match_operand:HI 2 "nonmemory_operand" "n,r")))]
+  [(set (match_operand:HI 0 "register_operand" "=r,r,r,r")
+	(plus:HI (match_operand:HI 1 "register_operand" "%0,0,0,0")
+		 (match_operand:HI 2 "nonmemory_operand" "L,N,n,r")))]
   "TARGET_H8300H || TARGET_H8300S"
   "@
+   adds	%2,%A0
+   subs	%2,%A0
    add.w	%T2,%T0
    add.w	%T2,%T0"
-  [(set_attr "length" "4,2")
-   (set_attr "cc" "set_zn,set_zn")])
+  [(set_attr "length" "2,2,4,2")
+   (set_attr "cc" "none_0hit,none_0hit,set_zn,set_zn")])
+
+(define_split
+  [(set (match_operand:HI 0 "register_operand" "")
+	(plus:HI (match_dup 0)
+		 (match_operand:HI 1 "two_insn_adds_subs_operand" "")))]
+  ""
+  [(const_int 0)]
+  "split_adds_subs (HImode, operands); DONE;")
 
 (define_expand "addsi3"
   [(set (match_operand:SI 0 "register_operand" "")
@@ -658,21 +655,6 @@
 		 (match_operand:SI 2 "nonmemory_operand" "")))]
   ""
   "")
-
-;; Specialized version using adds/subs.  This must come before
-;; the more general patterns below.
-(define_insn ""
-  [(set (match_operand:SI 0 "register_operand" "=r")
-	(plus:SI (match_operand:SI 1 "register_operand" "%0")
-		 (match_operand:SI 2 "adds_subs_operand" "n")))]
-  "TARGET_H8300H || TARGET_H8300S"
-  "* return output_adds_subs (operands);"
-  [(set_attr "cc" "none_0hit")
-   (set (attr "length")
-        (if_then_else (ne (match_operand:HI 2 "one_insn_adds_subs_operand" "")
-			  (const_int 0))
-		      (const_int 2)
-		      (const_int 4)))])
 
 (define_insn "addsi_h8300"
   [(set (match_operand:SI 0 "register_operand" "=r,r,&r")
@@ -687,15 +669,25 @@
    (set_attr "cc" "clobber")])
 
 (define_insn "addsi_h8300h"
-  [(set (match_operand:SI 0 "register_operand" "=r,r")
-	(plus:SI (match_operand:SI 1 "register_operand" "%0,0")
-		 (match_operand:SI 2 "nonmemory_operand" "i,r")))]
+  [(set (match_operand:SI 0 "register_operand" "=r,r,r,r")
+	(plus:SI (match_operand:SI 1 "register_operand" "%0,0,0,0")
+		 (match_operand:SI 2 "nonmemory_operand" "L,N,i,r")))]
   "TARGET_H8300H || TARGET_H8300S"
   "@
+   adds	%2,%A0
+   subs	%2,%A0
    add.l	%S2,%S0
    add.l	%S2,%S0"
-  [(set_attr "length" "6,2")
-   (set_attr "cc" "set_zn,set_zn")])
+  [(set_attr "length" "2,2,6,2")
+   (set_attr "cc" "none_0hit,none_0hit,set_zn,set_zn")])
+
+(define_split
+  [(set (match_operand:SI 0 "register_operand" "")
+	(plus:SI (match_dup 0)
+		 (match_operand:SI 1 "two_insn_adds_subs_operand" "")))]
+  "TARGET_H8300H || TARGET_H8300S"
+  [(const_int 0)]
+  "split_adds_subs (SImode, operands); DONE;")
 
 ;; ----------------------------------------------------------------------
 ;; SUBTRACT INSTRUCTIONS
@@ -718,26 +710,6 @@
 		  (match_operand:HI 2 "nonmemory_operand" "")))]
   ""
   "")
-
-;; Specialized version using adds/subs.  This must come before
-;; the more general patterns below.  This may not be needed
-;; due to instruction canonicalization.
-(define_insn ""
-  [(set (match_operand:HI 0 "register_operand" "=r")
-	(minus:HI (match_operand:HI 1 "register_operand" "r")
-		  (match_operand:HI 2 "adds_subs_operand" "n")))]
-  ""
-  "*
-{
-  operands[2] = GEN_INT (-INTVAL (operands[2]));
-  return output_adds_subs (operands);
-}"
-  [(set_attr "cc" "none_0hit")
-   (set (attr "length")
-        (if_then_else (ne (match_operand:HI 2 "one_insn_adds_subs_operand" "")
-			  (const_int 0))
-		      (const_int 2)
-		      (const_int 4)))])
 
 (define_insn ""
   [(set (match_operand:HI 0 "register_operand" "=r,&r")
@@ -776,26 +748,6 @@
   "sub.w	%f2,%f0\;subx	%y2,%y0\;subx	%z2,%z0"
   [(set_attr "length" "6")
    (set_attr "cc" "clobber")])
-
-;; Specialized version using adds/subs.  This must come before
-;; the more general patterns below.  This may not be needed
-;; due to instruction canonicalization.
-(define_insn ""
-  [(set (match_operand:SI 0 "register_operand" "=r")
-	(minus:SI (match_operand:SI 1 "general_operand" "0")
-		  (match_operand:SI 2 "adds_subs_operand" "n")))]
-  "TARGET_H8300H || TARGET_H8300S"
-  "*
-{
-  operands[2] = GEN_INT (-INTVAL (operands[2]));
-  return output_adds_subs (operands);
-}"
-  [(set_attr "cc" "none_0hit")
-   (set (attr "length")
-        (if_then_else (ne (match_operand:HI 2 "one_insn_adds_subs_operand" "")
-			  (const_int 0))
-		      (const_int 2)
-		      (const_int 4)))])
 
 (define_insn "subsi3_h8300h"
   [(set (match_operand:SI 0 "register_operand" "=r,r")
