--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -621,7 +621,7 @@
   "TARGET_H8300"
   "@
    adds	%2,%A0
-   subs	%2,%A0
+   subs	%G2,%A0
    add.b	%s2,%s0\;addx	%t2,%t0 
    add.w	%T2,%T0
    mov.w        %T1,%T0\;add.w  %T2,%T0"
@@ -635,7 +635,7 @@
   "TARGET_H8300H || TARGET_H8300S"
   "@
    adds	%2,%A0
-   subs	%2,%A0
+   subs	%G2,%A0
    add.w	%T2,%T0
    add.w	%T2,%T0"
   [(set_attr "length" "2,2,4,2")
@@ -675,7 +675,7 @@
   "TARGET_H8300H || TARGET_H8300S"
   "@
    adds	%2,%A0
-   subs	%2,%A0
+   subs	%G2,%A0
    add.l	%S2,%S0
    add.l	%S2,%S0"
   [(set_attr "length" "2,2,6,2")
