--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-18  David Billinghurst  <David.Billinghurst@riotinto.com.au>
+
+	* g77.f-torture/compile/200005018.f:  New test.
+
 Wed May 17 18:30:10 2000  Jeffrey A Law  (law@cygnus.com)
 
 	* gcc.c-torture/compile/20000517-1.c: New test.
