* lib/libjava.exp (bytecompile_file): Use exec, not system.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33989 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-18  Tom Tromey  <tromey@cygnus.com>
+
+	* lib/libjava.exp (bytecompile_file): Use exec, not system.
+
 2000-05-17  Tom Tromey  <tromey@cygnus.com>
 
 	* libjava.mauve/mauve.exp (test_mauve): Call `prune_warnings'.
