--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Thu May 18 12:10:18 2000  Philippe De Muyter  <phdm@macqel.be>
+
+	* configure.in (NO_MINUS_C_MINUS_O): Test `$ac_cv_prog_cc_${ac_cc}_c_o',
+	not `$ac_cv_prog_cc_cc_c_o'.
+	* configure: Regenerated.
+
 2000-05-18  Chris Demetriou  <cgd@sibyte.com>
 	    Richard Henderson  <rth@cygnus.com>
 
