--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-18  Chris Demetriou  <cgd@netbsd.org>
+
+	* Makefile.in (hash.h): Delete a redundant use of gawk and sed.
+
 Wed May 17 17:27:44 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* decl.c (c_decode_option): Update -Wall unused flags by
