* xmalloc.c: Include config.h for HAVE_SBRK definition.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34003 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-18  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* xmalloc.c: Include config.h for HAVE_SBRK definition.
+
 2000-05-16  Horst von Brand <vonbrand@sleipnir.valparaiso.cl>
 
         * hashtab.c (hash_pointer): Delete low-order bits which are
