From Gregory R. Warnes <warnes@biostat.washington.edu>: 	* gnu/gcj/protocol/jar/Connection.java (getJarFile): Test for null 	`jarFile', not `jarFileURL'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34005 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -5,6 +5,10 @@
 	jobject.
 	* gnu/gcj/RawData.java: Clarify documentation.
 
+	From Gregory R. Warnes <warnes@biostat.washington.edu>:
+	* gnu/gcj/protocol/jar/Connection.java (getJarFile): Test for null
+	`jarFile', not `jarFileURL'.
+
 2000-05-15  Andrew Haley  <aph@cygnus.com>
 
 	* include/ppc-signal.h: New file.
